--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<label for="a">What is the capital of India?</label>
+	<input type="radio" name="capital">New Delhi
+	<input type="radio" name="capital">Mumbai
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
