--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<label for="a">What is the capital of India?</label>
-	<input type="radio" name="capital">New Delhi
+	<input type="radio" name="capital" id="a">New Delhi
 	<input type="radio" name="capital">Mumbai
 	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
 		New Delhi is the capital of India and an administrative district of NCT Delhi.
