--- a/main.html
+++ b/main.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-	<label for="a">What is the capital of India?</label>
+	<label for="a">What is the capital of India?
 	<input type="radio" name="capital" id="a">New Delhi
-	<input type="radio" name="capital">Mumbai
+	<input type="radio" name="capital" id="a">Mumbai
+		</label>
 	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
 		New Delhi is the capital of India and an administrative district of NCT Delhi.
 	</blockquote>
